# FileCompressor

./: CMakeLists.txt  Readme.md
HuffmanCompression/: CMakeLists.txt
HuffmanCompression/include/: FrequenceMap.h  Hex.h  Huffman.h  HuffmanCompression.h  MapSorter.h  Node.h  Tree.h  WriteFile.h  main.h
HuffmanCompression/src/: FrequenceMap.cpp  Hex.cpp  Huffman.cpp  HuffmanCompression.cpp  MapSorter.cpp  Node.cpp  Tree.cpp  WriteFile.cpp  main.cpp
app/: CMakeLists.txt  main.cpp
app/include/: WriteFile.h  main.h
app/src/: WriteFile.cpp  main.cpp
